--- a/index.html
+++ b/index.html
@@ -22,8 +22,26 @@
                 <h2> Search for a City </h2>
                 <input class = "searchbar" type = "text" placeholder = "Search Here"> </input>
                 <button class = "searchBtn">Search </button>
-            
             </div>
+
+            <div class = "results-area">
+                <button class = "cityBtn">City</button>
+                <button class = "cityBtn">City</button>
+                <button class = "cityBtn">City</button>
+                <button class = "cityBtn">City</button>
+                <button class = "cityBtn">City</button>
+                <button class = "cityBtn">City</button>
+                <button class = "cityBtn">City</button>
+            </div>
+        </section>
+
+        <section class = "weather-forecast-container">
+            <div class = "city-forecast" > </div>
+            <div class = "five-day-forecast">
+                <h1> 5 Day Forecast</h1></h4>
+            </div>
+
+
         </section>
        
     </main>
