Get Coords commit

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <section id = "search-form" >
             <div class = "container-search">
                 <h2> Search for a City </h2>
-                <input class = "searchbar" type = "text" placeholder = "Search Here"> </input>
-                <button class = "searchBtn">Search </button>
+                <input class = "searchbar" id ="searchBar" type = "text" placeholder = "Search Here"> </input>
+                <button class = "searchBtn" id="searchBtn">Search </button>
             </div>
 
-            <div class = "results-area">
+            <!-- <div class = "results-area">
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
@@ -32,7 +32,7 @@
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
-            </div>
+            </div> -->
         </section>
 
         <section class = "weather-forecast-container">
