--- a/index.html
+++ b/index.html
@@ -24,27 +24,41 @@
                 <button class = "searchBtn" id="searchBtn">Search </button>
             </div>
 
-            <!-- <div class = "results-area">
+            <div class = "results-area">
+                <button class = "cityBtn">City</button>
+                <!-- <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
                 <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-            </div> -->
+                <button class = "cityBtn">City</button> -->
+            </div>
         </section>
 
         <section class = "weather-forecast-container">
-            <div class = "city-forecast" > </div>
-            <div class = "five-day-forecast">
-                <h1> 5 Day Forecast</h1></h4>
+            <div class = "city-forecast" >
+            <h1 class ="name" id = "name"></h1>
+            <p class = "temp" id= "temp"></p>  
+            <p class = "humidity" id= "humidity"></p>  
             </div>
-
-
         </section>
+        <section class = "fiveday-forcast-container">
+            <div class = "five-day-forecast">
+                <h1 class ="nameFive" id = "nameFive"></h1>
+                <p class = "tempFive" id= "tempFive"></p>  
+                <p class = "humidityFive" id= "humidityFive"></p>
+            </div>
+        </section>
+
+        
        
     </main>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script>
+      dayjs().format()
+    </script>
+
+
     <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src = "assets/script.js" > </script>
