--- a/index.html
+++ b/index.html
@@ -25,19 +25,14 @@
             </div>
 
             <div class = "results-area">
-                <button class = "cityBtn">City</button>
-                <!-- <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button>
-                <button class = "cityBtn">City</button> -->
+                <button class = "cityBtn"> City</button>
+        
             </div>
         </section>
 
         <section class = "weather-forecast-container">
             <div class = "city-forecast" >
-            <h1 class ="name" id = "name"></h1>
+            <h1 class ="name" id = "name"> City</h1>
             <p class = "temp" id= "temp"></p>  
             <p class = "humidity" id= "humidity"></p>  
             </div>
